--- a/.iceci.yaml
+++ b/.iceci.yaml
@@ -1,8 +1,8 @@
-globals:
-  onFailure:
-    #  This failure handler will be called failed of any step in the pipeline
-    # comment this out if you do not want to integrate pipeline with slack
-    - handlerName: slack-notify-error
+#globals:
+#  onFailure:
+#    #  This failure handler will be called failed of any step in the pipeline
+#    # comment this out if you do not want to integrate pipeline with slack
+#    - handlerName: slack-notify-error
 
 failureHandlers:
   - name: debug-env
@@ -15,18 +15,18 @@ failureHandlers:
       echo "ls -la"
       ls -la
 
-  - name: slack-notify-error
-    image: iceci/utils
-    script: |
-      cat <<EOF > slacknotify.json
-      {
-        "text" : "Build $ICE_BUILD_NUMBER on branch $ICE_GIT_BRANCH_NAME failed on step $ICE_FAILED_STEP_NAME commited by $ICE_GIT_AUTHOR_NAME"
-      }
-      EOF
-      curl -X POST -H 'Content-type: application/json' --data "@slacknotify.json" $SLACK_WEBHOOK
-    environment:
-      - name: SLACK_WEBHOOK
-        fromSecret: slack-webhook
+#  - name: slack-notify-error
+#    image: iceci/utils
+#    script: |
+#      cat <<EOF > slacknotify.json
+#      {
+#        "text" : "Build $ICE_BUILD_NUMBER on branch $ICE_GIT_BRANCH_NAME failed on step $ICE_FAILED_STEP_NAME commited by $ICE_GIT_AUTHOR_NAME"
+#      }
+#      EOF
+#      curl -X POST -H 'Content-type: application/json' --data "@slacknotify.json" $SLACK_WEBHOOK
+#    environment:
+#      - name: SLACK_WEBHOOK
+#        fromSecret: slack-webhook
 
 # Service with postgres will run during whole pipeline
 services:
@@ -67,24 +67,24 @@ steps:
 
   - name: build-docker-image
     containerBuild:
-      dockerSecret: dockerhub
-      user: iceci
-      imageName: example-go-webapp
+      dockerSecret: docker2
+      user: dandruszak
+      imageName: icetek
       tags:
       - "{{ ICE_BUILD_NUMBER }}"
       - latest
 
   # comment this step out if you do not want to integrate this pipeline with slack
-  - name: slack-notify
-    containerRun:
-      image: iceci/utils
-      script: |
-        cat <<EOF > slacknotify.json
-        {
-          "text" : "Build $ICE_BUILD_NUMBER on branch $ICE_GIT_BRANCH_NAME finished successfully!"
-        }
-        EOF
-        curl -X POST -H 'Content-type: application/json' --data "@slacknotify.json" $SLACK_WEBHOOK
-      environment:
-        - name: SLACK_WEBHOOK
-          fromSecret: slack-webhook
+#  - name: slack-notify
+#    containerRun:
+#      image: iceci/utils
+#      script: |
+#        cat <<EOF > slacknotify.json
+#        {
+#          "text" : "Build $ICE_BUILD_NUMBER on branch $ICE_GIT_BRANCH_NAME finished successfully!"
+#        }
+#        EOF
+#        curl -X POST -H 'Content-type: application/json' --data "@slacknotify.json" $SLACK_WEBHOOK
+#      environment:
+#        - name: SLACK_WEBHOOK
+#          fromSecret: slack-webhook
